@@ -188,29 +188,6 @@
 	end
 
 
-	function vc2010.warningBlocks(cfg)
-		local warnLevel = 3 -- default to normal warning level if there is not any warnings flags specified
-		if cfg.flags.NoWarnings then
-			warnLevel = 0
-		elseif cfg.flags.ExtraWarnings then
-			warnLevel = 4
-		end
-		_p(3,'<WarningLevel>Level%d</WarningLevel>', warnLevel)
-
-		-- Ohter warning blocks only when NoWarnings are not specified
-		if cfg.flags.NoWarnings then
-			return
-		end
-
-		if premake.config.isdebugbuild(cfg) and cfg.flags.ExtraWarnings then
-			_p(3,'<SmallerTypeCheck>true</SmallerTypeCheck>')
-		end
-
-		if cfg.flags.FatalWarnings then
-			_p(3,'<TreatWarningAsError>true</TreatWarningAsError>')
-		end
-	end
-
 --
 -- Write the the <ClCompile> compiler settings block.
 --
@@ -225,7 +202,7 @@
 			_p(3,'<PrecompiledHeader>NotUsing</PrecompiledHeader>')
 		end
 
-        vc2010.warningBlocks(cfg)
+        vc2010.warnings(cfg)
 		vc2010.preprocessorDefinitions(cfg.defines)
 		vc2010.additionalIncludeDirectories(cfg, cfg.includedirs)
 		vc2010.debuginfo(cfg)
@@ -664,6 +641,33 @@
 	end
 
 
+--
+-- Convert Premake warning flags to Visual Studio equivalents.
+--
+
+	function vc2010.warnings(cfg)
+		local warnLevel = 3 -- default to normal warning level if there is not any warnings flags specified
+		if cfg.flags.NoWarnings then
+			warnLevel = 0
+		elseif cfg.flags.ExtraWarnings then
+			warnLevel = 4
+		end
+		_p(3,'<WarningLevel>Level%d</WarningLevel>', warnLevel)
+
+		-- Ohter warning blocks only when NoWarnings are not specified
+		if cfg.flags.NoWarnings then
+			return
+		end
+
+		if premake.config.isdebugbuild(cfg) and cfg.flags.ExtraWarnings then
+			_p(3,'<SmallerTypeCheck>true</SmallerTypeCheck>')
+		end
+
+		if cfg.flags.FatalWarnings then
+			_p(3,'<TreatWarningAsError>true</TreatWarningAsError>')
+		end
+	end
+
 
 -----------------------------------------------------------------------------
 -- Everything below this point is a candidate for deprecation
@@ -932,7 +936,7 @@
 			_p(3,'<FunctionLevelLinking>true</FunctionLevelLinking>')
 
 			precompiled_header(cfg)
-			vc2010.warningBlocks(cfg)
+			vc2010.warnings(cfg)
 			exceptions(cfg)
 			rtti(cfg)
 			wchar_t_buildin(cfg)
